--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-fastapi>=0.115,<1
-uvicorn[standard]>=0.30,<1
-python-multipart>=0.0.9,<1     # für Datei-Upload (Form-Data)
-Pillow>=10.4,<11               # PNG/WebP usw.
-numpy>=1.26,<3
-opencv-python-headless>=4.9,<5 # OpenCV ohne GUI-Dependencies
+# requirements.txt (Auszug)
+fastapi==0.112.2
+uvicorn[standard]==0.30.6
+Pillow==10.4.0
+numpy==2.0.1
+opencv-python-headless==4.10.0.84
