--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-# requirements.txt (Auszug)
-fastapi==0.112.2
-uvicorn[standard]==0.30.6
-Pillow==10.4.0
-numpy==2.0.1
-opencv-python-headless==4.10.0.84
+fastapi
+uvicorn[standard]
+Pillow
+numpy
+opencv-python-headless
 python-multipart
